Fix broken css

--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -10,7 +10,7 @@
 
 @font-face {
     font-family: AlteHaasGroteskRegular;
-    src: url(/assets/fonts/AlteHaasGroteskRegular.ttf);
+    src: url(https://github.com/HellFireNeko/worldofunlit-webassets/raw/refs/heads/main/assets/fonts/AlteHaasGroteskRegular.ttf);
 }
 
 :root {
